tests/fail/UnfoundSymbols.java
package fail;

public class UnfoundSymbols {
    public void method() {
        i = 0;
        j = 1;
        i = 2;
        j = 0;
    }
}
